<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbImageDetailsScreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:titleTextColor="@color/black" />

    <TextView
        android:id="@+id/tvToolBarNameSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name Surname"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tbImageDetailsScreen"
        app:layout_constraintEnd_toEndOf="@+id/tbImageDetailsScreen"
        app:layout_constraintStart_toStartOf="@+id/tbImageDetailsScreen"
        app:layout_constraintTop_toTopOf="@+id/tbImageDetailsScreen" />

    <LinearLayout
        android:id="@+id/bottomLinearLayImageDetailsScreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="30dp">

            <ImageButton
                android:id="@+id/imBtDownload"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pexels_color"
                android:padding="8dp"
                android:src="@drawable/ic_download" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvDownload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:text="@string/download"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/imBtBackToBookmarks"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:padding="8dp"
            android:src="@drawable/ic_bookmarks" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewImageDetailsScreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="#B8B8B8"
        android:visibility="visible"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomLinearLayImageDetailsScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbImageDetailsScreen">

        <ImageView
            android:id="@+id/imImageDetailsScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_image_placeholder" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvImageNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_image_message"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbImageDetailsScreen" />

    <TextView
        android:id="@+id/tvExploreImageDetailsScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore"
        android:textColor="@color/pexels_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/tvImageNotFound"
        app:layout_constraintStart_toStartOf="@+id/tvImageNotFound"
        app:layout_constraintTop_toBottomOf="@+id/tvImageNotFound" />
</androidx.constraintlayout.widget.ConstraintLayout>